--- a/src/MainStyle.css
+++ b/src/MainStyle.css
@@ -23,8 +23,17 @@ h1, h3 {
 }
 
 .searchlabel {
-  margin: 0px;
-  text-align: center;
+  display: block;
+  padding: 2px 0px 5px 0px;
+  margin: 0px 5px 0px 5px;
+  text-align:center;
+  border-width: 2px;
+  border-radius: 5px;
+  color: tan;
+  border-color: black;
+  border-style: solid;
+  background-color: darkslategray;
+  overflow: hidden;
 }
 
 .filter-category {
@@ -32,7 +41,7 @@ h1, h3 {
   flex-direction: column;
   margin: 5px 5px 0px 5px;
   border-radius: 5px;
-  border-color: black;
+  border-color: black ;
   background-color:cadetblue;
   border-style: solid;
 }
@@ -58,7 +67,7 @@ h1, h3 {
   padding: 2px;
   text-align: center;
   border-radius: 5px;
-  background-color: black;
+  background-color:black;
   color: white;
 }
 
