adding some content to the home page

--- a/src/components/MainNav.css
+++ b/src/components/MainNav.css
@@ -10,6 +10,11 @@
   align-items: center;
 }
 
+.main-nav a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
 .nav-logo {
   float: left;
   width: 50px;
