--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,11 @@
+.footer-spacer {
+  height: 30px;
+}
+
 footer {
-  height: 50px;
+  z-index: 1;
+  padding: 5px;
+  height: 25px;
   color: white;
   background-color: black;
   bottom: 0;
@@ -8,6 +14,10 @@ footer {
 }
 
 .footer-list {
-  display: flex;
+  margin: 0px;
   list-style: none;
+}
+
+small {
+  font-size: .7rem;
 }
