--- a/src/components/MainNav.css
+++ b/src/components/MainNav.css
@@ -1,8 +1,8 @@
 .main-nav {
   z-index: 1;
-  padding: 5px;
+  padding: 0px;
   top: 0px;
-  position: fixed;
+  position: sticky;
   width: 100%;
   overflow: hidden;
   background-color: black;
