--- a/src/MainStyle.css
+++ b/src/MainStyle.css
@@ -18,6 +18,11 @@ h1, h2, h3, h4 {
   margin: 0px;
 }
 
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
 .searchlabel {
   display: block;
   padding: 2px 0px 5px 0px;
