Implemented Basic Champion Details Page
Implemented ChampionDetals to dynamically route based on existing champion data in DataDragon. Also pulling data from DataDragon live instead of local files

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -8,7 +8,7 @@
   word-wrap:break-word;
 }
 
-.card:hover {
+.card-hoverable:hover {
   border-color: goldenrod;
   transition: transform 0.25s;
   transform: scale(1.1);
