--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -8,6 +8,12 @@
   word-wrap:break-word;
 }
 
+.card > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .card-hoverable:hover {
   border-color: goldenrod;
   transition: transform 0.25s;
